examples/invalid/variables3.cp
var 10out_of10 : integer is 10;